<resources>
    <string name="app_name">TC22 Auto Connect V1.0</string>
    <string name="action_settings">Settings</string>
    <string name="antenna_settings">Antenna Settings</string>
    <string name="Singulation_control">Singulation Control</string>
    <string name="Defaults">Reset to Defaults</string>
    <string name="Connect">Connect Reader</string>
    <string name="Disconnect">Disconnect Reader</string>
    <string name="TestConnectDisconectLoop">Run Connection Test Loop</string>
    <string name="rfid_status_disconnected">RFID Status: Disconnected</string>
    <string name="status_disconnected">Disconnected</string>
    <string name="status_connecting">Connecting...</string>
    <string name="status_connected">Connected</string>
    <string name="status_error">Connection Error</string>
    <string name="ready_to_connect">Ready to connect</string>
    <string name="scan_barcode">Scan Barcode</string>
    <string name="tag_id_label">TAG ID</string>
    <string name="rssi_label">RSSI</string>
    <string name="no_tags_read">No tags read</string>
    <string name="testing_loop">Testing Loop...</string>
    <string name="please_wait_test_connection">Please wait while we test connection</string>
    <string name="rfid_inventory_controls">RFID INVENTORY CONTROLS</string>
    <string name="start_button">Start</string>
    <string name="stop_button">Stop</string>
    <string name="count_label">Count</string>
    <string name="SetPrefitlerTID_S0_INVB">Set TID Prefilter B, INV_B, S0</string>
    <string name="ClearPrefitler">Clear Prefitler and Restore to A</string>
    <string name="ResetPCto3000">Reset PC to 3000 After Set TID Prefitler</string>
    <string name="Write_Single_Tag">Write Selected Tag</string>
    <string name="Clear_List">Clear UI</string>
</resources>
